[gd_scene load_steps=3 format=3 uid="uid://cp2h6t3sic7v8"]

[ext_resource type="Script" uid="uid://027djjrm3a3w" path="res://player.gd" id="1_4flbx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4flbx"]

[node name="Player" type="CharacterBody3D"]
motion_mode = 1
script = ExtResource("1_4flbx")

[node name="Camera3D" type="Camera3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_4flbx")
disabled = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Crosshair" type="Label" parent="GUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 50
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlockSelected" type="Label" parent="GUI"]
offset_right = 40.0
offset_bottom = 23.0
text = "Block Selected:"

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -33.0
offset_right = 35.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="settings" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="quit" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PauseMenu/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/quit" to="." method="_on_quit_pressed"]
